--- a/source/less/components/contacts.less
+++ b/source/less/components/contacts.less
@@ -117,11 +117,17 @@
         }
       }
       .numbers {
+        &--1 {
+          @media @tablet,
+          @desktop {
+            margin-right: 8px;
+          }
+        }
         @media @mobile {
           display: inline-block;
           width: 40.7%;
           &--2 {
-            margin-left: 17.5%;
+            margin-left: 18.6%;
           }
         }
       }
