--- a/source/less/components/main-content.less
+++ b/source/less/components/main-content.less
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
+  background: white;
   @media @tablet,
   @desktop {
     .features {
@@ -37,6 +38,7 @@
     .img {
       width: 66.666%;
       display: inline-block;
+      margin-top: -1px;
       &--1 {
         background: url("../img/photo-city@1x.jpg") center no-repeat;
       }
