--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -40,7 +40,7 @@
       box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
       border-bottom: 1px solid #9ac2db;
       background: #81b3d2;
-      height: 56px;
+      height: 50px;
       width: 100%;
     }
     @media @tablet,
@@ -65,9 +65,12 @@
     font-weight: bold;
     line-height: 26px;
     text-transform: uppercase;
+    &:active {
+      color: #b2b2b2;
+    }
     @media @mobile {
       font-size: 18px;
-      line-height: 56px;
+      line-height: 50px;
       color: white;
     }
     @media @tablet,
